--- a/public/scanner-improved.html
+++ b/public/scanner-improved.html
@@ -541,7 +541,7 @@
         
         <div class="footer">
             <p><strong>AI-Karangué 2025</strong> - Système de Vérification des Tickets</p>
-            <p>20 septembre 2025 • CICAD - RUFISQUE • 10h00 - 14h00</p>
+            <p>20 septembre 2025 • CICAD - DIAMNIADIO • 09h30 - 12h30</p>
         </div>
     </div>
 
